# ComfyTV

./: .coveragerc  .gitignore  LICENSE  README.md  README.zh.md  __init__.py  db.py  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  storage.py  vite.config.mts  vite.harness.config.mts  vitest.config.mts
api/: __init__.py  _common.py  assets.py  capabilities.py  entries.py  fx_preview.py  outputs.py  presets.py  proxies.py  resources.py  scene3d_assets.py  servers.py  stage_params.py  stages.py  storyboard_editor.py  video_fx.py  workflows.py
docs/: image-tools.md  image-tools.zh.md  models.md  models.zh.md  roadmap.md  roadmap.zh.md
e2e/: adjust.spec.ts  compositor.spec.ts  contextloss.spec.ts  fill.spec.ts  layers.spec.ts  paint.spec.ts  ui-shot.spec.ts  vector.spec.ts
js/: main.js
mesh3d/: __init__.py  boolean.py  core.py  io3d.py  lineart.py  ops.py  postprocess_ops.py  primitives.py  subdivide.py
nodes/: bridges.py
runners/: __init__.py  animatic.py  audio_dsp.py  audio_react.py  base.py  blend_modes.py  face_tools.py  fx_chain_exec.py  fx_torch.py  geometry.py  keyframes.py  keying.py  local_comfy.py  luma_maps.py  mask_propagate.py  media.py  media_filter.py  media_remap.py  media_torch.py  notify.py  optics.py  paint.py  particles.py  patterns.py  procedural.py  proxy.py  remote_comfy.py  retro.py  roseus_lut.py  roto.py  stabilize.py  temporal.py  text_overlay.py  track_solve.py  tracker.py  uvmap.py  video_color_ops.py  video_stylize_ops.py  video_timeline_ops.py  zdefocus.py
src/: main.ts  (+2 more)
(+1356 files in other folders)
